[workspace]

members = [
    "fine",
    "fresh",
    "yargs",
    "zipper",
]

[workspace.package]
authors = ["Dan (d2718) <dx2718@gmail.com>"]
edition = "2021"
rust-version = "1.60.0"
license = "MIT"
repository = "https://github.com/d2718/softies"
homepage = "https://github.com/d2718/softies"

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1